Fixed font, and spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,4 @@
 .app-container {
-  font-family: Poppins !important;
   display: flex;
   width: 100%;
   height: 100%;
@@ -27,7 +26,6 @@
 }
 
 .section {
-  width: 100%;
   padding: 1.3vw;
   border-bottom: 1px solid #222226;
 }
